<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/phone_prompt_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_register_phone_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/verificationcode_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/str_input_verificationcode_prompt"
                android:maxLength="6"
                android:numeric="integer"
                android:text="" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_next" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/revalidated_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_reacquire_verification" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/passwd_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/str_password_prompt"
                android:inputType="textPassword"
                android:maxLength="24"
                android:numeric="integer"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>